# h2hist

./: .vc-config.toml  ARCHITECTURE.md  Cargo.toml  CargoRust.toml  README.md  TODO.md  version.toml
benches/: record.rs
dev/: consts.rs  mod.rs  rng.rs  stream.rs
examples/: h2demo.rs
notes/: README.md  done.md
notes/chores/: chores-01.md
scripts/: check-no-std.sh
src/: analysis.rs  array.rs  bands.rs  config.rs  counter.rs  histogram.rs  lib.rs  numfmt.rs  report.rs  stats.rs  table.rs
tests/: oracle.rs
