# no_std-first HdrHistogram-style log-linear histogram; the
# core recording structure for ../tprobe. Design and size
# tradeoffs in ARCHITECTURE.md; version-of-record lives here
# (see notes/versioning.md).
[package]
name = "h2hist"
version = "0.1.3-8"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
description = "no_std no-alloc HdrHistogram-style log-linear histogram"
publish = false

[features]
default = ["std"]
std = []

# Panicking sites are opt-in: each needs a site `#[allow]` +
# `// OK: …` justification (see AGENTS.md > Code Conventions).
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[dependencies]

# Correctness oracles (tests only): iopsystems `histogram`
# shares the h2 scheme (exact counts parity); `hdrhistogram`
# is the reference implementation (quantile parity within
# equivalent-value tolerance).
[dev-dependencies]
hdrhistogram = { version = "7", default-features = false }
histogram = "1"

# Hand-rolled bench (no criterion): a custom main keeps the
# dev-dep graph small and the loop under our control.
[[bench]]
name = "record"
harness = false
